--- a/HydroColor/Views/CaptureImageView.xaml
+++ b/HydroColor/Views/CaptureImageView.xaml
@@ -5,18 +5,22 @@
              xmlns:converters="clr-namespace:HydroColor.Converters"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:strings="clr-namespace:HydroColor.Resources.Strings"
+             xmlns:views="clr-namespace:HydroColor.Views"
              x:DataType="viewmodels:CaptureImageViewModel"
              x:Class="HydroColor.Views.CaptureImageView"
              Title="{Binding ImageType.DisplayName}"
              Shell.TabBarIsVisible="false"
-             Shell.NavBarIsVisible="true">
+             Shell.NavBarIsVisible="true"
+             x:Name="CaptureImageContentPage">
 
     <ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior
         EventName="Appearing"
+        BindingContext="{Binding Path=BindingContext, Source={x:Reference CaptureImageContentPage}, x:DataType=views:CaptureImageView}"
         Command="{Binding ViewAppearingCommand}" />
         <toolkit:EventToCommandBehavior
         EventName="Unloaded"
+        BindingContext="{Binding Path=BindingContext, Source={x:Reference CaptureImageContentPage}, x:DataType=views:CaptureImageView}"
         Command="{Binding ViewUnloadedCommand}" />
     </ContentPage.Behaviors>
 
@@ -80,6 +84,7 @@
             <viewmodels:CameraPreview.Behaviors>
                 <toolkit:EventToCommandBehavior
                     EventName="CameraDidNotOpen"
+                    BindingContext="{Binding Path=BindingContext, Source={x:Reference CaptureImageContentPage}, x:DataType=views:CaptureImageView}"
                     Command="{Binding CameraDidNotOpenCommand}"/>
             </viewmodels:CameraPreview.Behaviors>
         </viewmodels:CameraPreview>
@@ -88,8 +93,8 @@
                 StrokeThickness="{OnPlatform 8, iOS=8, Android=4}" 
                 VerticalOptions="Center" 
                 HorizontalOptions="Center"
-                WidthRequest="{Binding Source={x:Reference cameraPreview}, Path=Width, Converter={StaticResource CameraBoxOverlayWidthConverter}}"
-                HeightRequest="{Binding Source={x:Reference cameraPreview}, Path=Width, Converter={StaticResource CameraBoxOverlayWidthConverter}}"
+                WidthRequest="{Binding Source={x:Reference cameraPreview}, Path=Width, Converter={StaticResource CameraBoxOverlayWidthConverter}, x:DataType=viewmodels:CameraPreview}"
+                HeightRequest="{Binding Source={x:Reference cameraPreview}, Path=Width, Converter={StaticResource CameraBoxOverlayWidthConverter}, x:DataType=viewmodels:CameraPreview}"
                 BackgroundColor="Transparent"
                 Stroke="{Binding CaptureButtonColor}">
             <Border.StrokeShape>
