--- a/HydroColor/Views/CompassCalibrationHelpPopup.xaml
+++ b/HydroColor/Views/CompassCalibrationHelpPopup.xaml
@@ -2,6 +2,8 @@
 <toolkit:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:strings="clr-namespace:HydroColor.Resources.Strings"
+             xmlns:vm="clr-namespace:HydroColor.ViewModels"
+             x:DataType="vm:CaptureImageViewModel"
              x:Class="HydroColor.Views.CompassCalibrationHelpPopup"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              Color="White" >
