Switched to MAUI Handers
Changed the custom camera view renderers to .net MAUI handlers.

--- a/HydroColor/Views/AboutView.xaml
+++ b/HydroColor/Views/AboutView.xaml
@@ -20,7 +20,7 @@
                    FontSize="30"
                    VerticalOptions="Center"
                    VerticalTextAlignment="Center"/>
-                <Label Text="{x:Static strings:Strings.About_HydroColorTitle}"
+                <Label Text="{x:Static strings:Strings.About_HydroColorSubtitle}"
                    FontSize="20"
                    VerticalOptions="Center"
                    VerticalTextAlignment="Center"/>
